--- a/openstack-dashboard/dashboard/templates/syspanel_tenant_usage.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_tenant_usage.html
@@ -1,5 +1,6 @@
 {% extends "syspanel_base.html" %}
 {% load parse_date %}
+{% load sizeformat %}
 
 {# shows usage for an individual tenant #}
 
@@ -91,7 +92,7 @@
                 <td>{{instance.name}}</td>
                 <td>{{instance.user_id}}</td>
                 <td>{{instance.vcpus}}</td>
-                <td>{{instance.ram_size}}MB</td>
+                <td>{{instance.ram_size|mbformat}}</td>
                 <td>{{instance.disk_size}}GB</td>
                 <td>{{instance.flavor}}</td>
                 <td>{{instance.uptime_at|timesince}}</td>
