making a text pass on everything

--- a/openstack-dashboard/dashboard/templates/syspanel_user_update.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_user_update.html
@@ -23,14 +23,11 @@
         <h3>Update User</h3> 
       </div> 
 
-      {% include '_user_form.html' %}
+      {% include 'django_openstack/syspanel/_update_user_form.html' %}
       
       <div class="right">
         <h3>Description:</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vitae est urna. Phasellus sagittis, sem posuere hendrerit mattis, velit risus viverra enim, tempus dapibus sem turpis ac erat.</p>
-        <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed mollis ligula nec lacus mollis eu laoreet lectus porta. </p>
-        <p>Sed iaculis mauris et est consectetur egestas. Praesent dolor libero, semper sed aliquet</p>
-
+        <p>From here you can edit users by changing their usernames, emails, passwords, and tenants.</p>
       </div>
     </div>
   </div>
