--- a/openstack-dashboard/dashboard/templates/_user_form.html
+++ b/openstack-dashboard/dashboard/templates/_user_form.html
@@ -6,5 +6,7 @@
     {{ field.errors }}
     {{ field }}
   {% endfor %}
-  <input type="submit" value="Submit" class="large-rounded" />
+  {% block submit %}
+  {% endblock %}
 </form>
+
