--- a/openstack-dashboard/dashboard/templates/syspanel_create_flavor.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_create_flavor.html
@@ -13,7 +13,6 @@
    <h2><span>System Panel:</span> Flavors</h2>
    <p class='desc'><span>&mdash;</span> Create, Edit and Delete Flavors.</p>
   </div>
-`
   {% include "_messages.html" %}
 
   <div class="main_content">
@@ -26,10 +25,7 @@
 
       <div class="right">
         <h3>Description:</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vitae est urna. Phasellus sagittis, sem posuere hendrerit mattis, velit risus viverra enim, tempus dapibus sem turpis ac erat.</p>
-        <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed mollis ligula nec lacus mollis eu laoreet lectus porta. </p>
-        <p>Sed iaculis mauris et est consectetur egestas. Praesent dolor libero, semper sed aliquet</p>
-
+        <p>From here you can define the sizing of a new flavor.</p>
       </div>
     </div>
   </div>
