--- a/openstack-dashboard/dashboard/templates/syspanel_tenant_update.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_tenant_update.html
@@ -20,14 +20,11 @@
         <div class='title_block'>
         <h3>Update Tenant</h3>
         </div>
-        {% include '_tenant_form.html' %}
+        {% include 'django_openstack/syspanel/_update_tenant_form.html' %}
 
         <div class="right">
           <h3>Description:</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vitae est urna. Phasellus sagittis, sem posuere hendrerit mattis, velit risus viverra enim, tempus dapibus sem turpis ac erat.</p>
-          <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed mollis ligula nec lacus mollis eu laoreet lectus porta. </p>
-          <p>Sed iaculis mauris et est consectetur egestas. Praesent dolor libero, semper sed aliquet</p>
-
+          <p>From here you can edit a tenant.</p>
         </div>
       </div>
     </div>
