--- a/openstack-dashboard/dashboard/templates/syspanel_upload.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_upload.html
@@ -24,10 +24,7 @@
 
       <div class="right">
         <h3>Description:</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vitae est urna. Phasellus sagittis, sem posuere hendrerit mattis, velit risus viverra enim, tempus dapibus sem turpis ac erat.</p>
-        <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed mollis ligula nec lacus mollis eu laoreet lectus porta. </p>
-        <p>Sed iaculis mauris et est consectetur egestas. Praesent dolor libero, semper sed aliquet</p>
-
+        <p>From here you can name and upload a new server image to use throughout your cloud.</p>
       </div>
     </div>
   </div>
