--- a/openstack-dashboard/dashboard/templates/_syspanel_tenant_list.html
+++ b/openstack-dashboard/dashboard/templates/_syspanel_tenant_list.html
@@ -13,7 +13,7 @@
       <td id="actions">
         <ul>
           <li>{% include "_tenant_delete.html" with form=tenant_delete_form %}</li>
-          <li><a href="{% url syspanel_tenant_update tenant.id %}">Update</a></li>
+          <li><a href="{% url syspanel_tenant_update tenant.id %}">Edit</a></li>
           <li><a href="{% url syspanel_tenant_users tenant.id %}">View Members</a></li>
         </ul>
       </td>
