--- a/openstack-dashboard/media/dashboard/css/style.css
+++ b/openstack-dashboard/media/dashboard/css/style.css
@@ -103,6 +103,10 @@ border: 1px solid #cbe0e8;
 	padding-top: 10px;
 }
 
+small {
+    font-size: 12px;
+}
+
 #main_nav li a.active {
 	border-top: 5px solid #8eacb7;
 	padding-top: 5px;
