some visual and ergonomic tweaks

--- a/openstack-dashboard/dashboard/templates/dash_keypairs.html
+++ b/openstack-dashboard/dashboard/templates/dash_keypairs.html
@@ -11,7 +11,7 @@
 {% block main %}
   <div id='page_header'>
     <h2><span>Compute:</span> Keypairs</h2> 
-    <p class='desc'><span>&mdash;</span> You may make a keypair, and use the private key to login to your instances.</p> 
+    <p class='desc'><span>&mdash;</span> Manage keypairs that allow instance authentication.</p> 
   </div>
   {% include "_messages.html" %}
 
