--- a/openstack-dashboard/dashboard/templates/dash_keypairs_create.html
+++ b/openstack-dashboard/dashboard/templates/dash_keypairs_create.html
@@ -26,7 +26,7 @@
 {% block main %}
   <div id='page_header'>
     <h2><span>Compute:</span> Keypairs </h2>
-    <p class='desc'><span>&mdash;</span> Manage keypairs.</p>
+    <p class='desc'><span>&mdash;</span> Create a keypair.</p>
   </div>
 
   {% include "_messages.html" %}
@@ -45,8 +45,8 @@
 
       <div class="right">
         <h3>Description:</h3>
-        <p>Keypairs are ssh credentials which are injected into images when they are launched. Creating a new key pair registers the public key and downloads the private key (a pem file).</p>
-        <p>Protect and use the key as a normal private key.</p>
+        <p>Keypairs are ssh credentials which are injected into images when they are launched. Creating a new key pair registers the public key and downloads the private key (a .pem file).</p>
+        <p>Protect and use the key as you would any normal ssh private key.</p>
       </div>
     </div>
   </div>
