--- a/openstack-dashboard/dashboard/templates/dash_launch.html
+++ b/openstack-dashboard/dashboard/templates/dash_launch.html
@@ -27,7 +27,7 @@
 
     <div class="right">
       <h3>Description:</h3>
-      <p>From here you can specify the details for launching an instance</p>
+      <p>Specify the details for launching an instance.</p>
     </div>
 
   </div>
