add an empty span to correct spacing on syspanel dash

--- a/openstack-dashboard/dashboard/templates/syspanel_usage.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_usage.html
@@ -42,7 +42,7 @@
       <li class='status block'><span>Status:</span> Good</li>
       <li class='block'>
         <p class='overview'>{{global_summary.max_vcpus|floatformat}}<span> Cores</span></p>
-        <p class='used'>{{global_summary.total_active_vcpus}}<span class='label'> Used</span></p>
+        <p class='used'>{{global_summary.total_active_vcpus}}<span class='unit'></span><span class='label'> Used</span></p>
 <!--
         <p class='avail'>{{available_cores}}<span class='label'> Avail</span></p>
 -->
