--- a/openstack-dashboard/dashboard/templates/_instance_list.html
+++ b/openstack-dashboard/dashboard/templates/_instance_list.html
@@ -16,7 +16,7 @@
     {% for instance in instances %}
       <tr class="{% cycle 'odd' 'even' %}">
           <td>{{instance.id}}</td>
-          <td>{{instance.name}}
+          <td class="name">{{instance.name}}
             {% if instance.attrs.key_name %}
                 <br/>
                 <small> ({{instance.attrs.key_name}}) </small>
