--- a/openstack-dashboard/media/dashboard/css/style.css
+++ b/openstack-dashboard/media/dashboard/css/style.css
@@ -598,6 +598,17 @@ table#instances  {
 	width: 711px;
 	color: #777;
 }
+
+table#instances td.name{
+	max-width: 123px;
+	overflow: hidden;
+}
+
+table#instances td.name:hover {
+	overflow: auto;	
+	z-index: 999;
+}
+
 table ul {
 	margin-left: 20px;
 }
@@ -1640,9 +1651,4 @@ li.title h4{
 	float: left;
 	margin-left: 25px;
 }
-
-
-
-
-
 
