--- a/openstack-dashboard/dashboard/templates/_dash_sidebar.html
+++ b/openstack-dashboard/dashboard/templates/_dash_sidebar.html
@@ -6,4 +6,10 @@
     <li><a {% if current_sidebar == "images" %} class="active" {% endif %} href="{% url dash_images request.user.tenant %}">Images</a></li>
     <li><a {% if current_sidebar == "keypairs" %} class="active" {% endif %} href="{% url dash_keypairs request.user.tenant %}">Keypairs</a></li>
   </ul>
+  {% if swift_configured %}
+  <h3>Manage Object Store</h3>
+  <ul class='sub_nav'>
+    <li><a {% if current_sidebar == "containers" %} class="active" {% endif %} href="{% url dash_containers request.user.tenant %}">Containers</a></li>
+  </ul>
+  {% endif %}
 </div>
