--- a/openstack-dashboard/dashboard/templates/syspanel_create_flavor.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_create_flavor.html
@@ -21,8 +21,25 @@
         <h3>Create Flavor</h3>
       </div>
 
-      {% include "_create_flavor.html" %}
+      <div class="left">
+        <ul class='stat_box info small'>
+          <li class='block'>
+            <p class='overview'>{{global_summary.max_vcpus|floatformat}}<span> Cores</span></p>
+            <p class='avail'>{{available_cores}} <span class='unit'>vcpu</span> <span class='label'>Available</span></p>
+          </li>
+          <li class='block'>
+            <p class='overview'>{{total_ram}}<span> {{ram_unit}} Ram</span></p>
+            <p class='avail'>{{avail_ram|floatformat}}<span class='unit'>{{ram_unit}}</span><span class='label'>Available</span></p>
+          </li>
+          <li class='block last'>
+            <p class='overview'>{{max_disk_tb}}<span>TB Disk</span></p>
+            <p class='avail'>{{available_disk_tb}}<span class='unit'>TB</span><span class='label'>Available</span></p>
+          </li>
+        </ul>
 
+        {% include "_create_flavor.html" %}
+      </div>
+      
       <div class="right">
         <h3>Description:</h3>
         <p>From here you can define the sizing of a new flavor.</p>
