--- a/openstack-dashboard/dashboard/templates/syspanel_flavors.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_flavors.html
@@ -31,7 +31,7 @@
 
     {% include "_syspanel_flavor_list.html" %}
 
-    <a id="flavor_create_link" href="{% url syspanel_flavors_create %}">Create New Flavor &gt;&gt;</a>
+    <a id="flavor_create_link" class="action_link large-rounded" href="{% url syspanel_flavors_create %}">Create New Flavor </a>
 
 
 {% endblock %}
