--- a/openstack-dashboard/dashboard/templates/syspanel_tenants.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_tenants.html
@@ -29,7 +29,7 @@
       </div>
       {% include "_syspanel_tenant_list.html" %}
 
-      <a id="tenant_create_link" href="{% url syspanel_tenants_create %}">Create New Tenant >></a>
+      <a id="tenant_create_link" class="action_link large-rounded" href="{% url syspanel_tenants_create %}">Create New Tenant </a>
     </div>
 {% endblock %}
 
