--- a/openstack-dashboard/dashboard/templates/syspanel_users.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_users.html
@@ -51,7 +51,7 @@
         </tr>
       {% endfor %} 
     </table>                       
-    <a id="user_create_link" href="{% url syspanel_users_create %}">Create New User >></a>
+    <a id="user_create_link" class="action_link large-rounded" href="{% url syspanel_users_create %}">Create New User </a>
   </div>
 
 
