--- a/openstack-dashboard/dashboard/templates/syspanel_images.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_images.html
@@ -31,6 +31,6 @@
 
   {% include "_syspanel_image_list.html" %}
 
-  <a id="image_create_link" href="{% url syspanel_images_upload %}">Upload New Image &gt;&gt;</a>
+  <a id="image_create_link" class="action_link large-rounded" href="{% url syspanel_images_upload %}">Upload New Image </a>
 
 {% endblock %}
