--- a/openstack-dashboard/dashboard/templates/syspanel_users.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_users.html
@@ -11,7 +11,7 @@
 {% block main %}
   <div id='page_header'>
     <h2><span>System Panel:</span> Users</h2>
-    <p class='desc'><span>&mdash;</span> Create, Edit, Upload, and Delete Users.</p>
+    <p class='desc'><span>&mdash;</span> Create, Edit, and Delete Users.</p>
   </div>
 
   {% include "_messages.html" %}
