adding confirmations to terminate instance, and commenting out permissions toggle for images

--- a/openstack-dashboard/dashboard/templates/_terminate.html
+++ b/openstack-dashboard/dashboard/templates/_terminate.html
@@ -4,5 +4,5 @@
     {{hidden}}
   {% endfor %}
   <input name="instance" type="hidden" value="{{instance.id}}" />
-  <input id="terminate_{{instance.id}}" class="terminate" type="submit" value="Terminate" />
+  <input id="terminate_{{instance.id}}" class="terminate" title="{{instance.name}}" type="submit" value="Terminate" />
 </form>
