--- a/openstack-dashboard/dashboard/templates/_syspanel_image_list.html
+++ b/openstack-dashboard/dashboard/templates/_syspanel_image_list.html
@@ -22,7 +22,7 @@
       <td id="actions">
         <ul>
           <li>{% include "_delete_image.html" with form=delete_form %}</li>
-          <li>{% include "_toggle_image.html" with form=toggle_form %}</li>
+          {# <li>{% include "_toggle_image.html" with form=toggle_form %}</li> #}
 
           <li><a href="{% url syspanel_images_update image.id %}">Edit</a></li>
         </ul>
