--- a/openstack-dashboard/dashboard/templates/_add_tenant_user.html
+++ b/openstack-dashboard/dashboard/templates/_add_tenant_user.html
@@ -1,8 +1,9 @@
-<form id="form_add_tenant_user{{user.id}}" method="post">
+<form id="form_add_tenant_user{{user}}" method="post">
   {% csrf_token %}
   {% for hidden in form.hidden_fields %}
     {{hidden}}
   {% endfor %}
-  <input name="user" type="hidden" value="{{user.id}}" />
-  <input id="add_tenant_user_{{user.id}}" class="add" ttle="User: {{user.id}}" type="submit" value="Delete" />
+  <input name="user" type="hidden" value="{{user}}" />
+  <input name="tenant" type="hidden" value="{{tenant_id}}" />
+  <input id="add_tenant_user_{{user}}" class="add" ttle="User: {{user}}" type="submit" value="Add" />
 </form>
