--- a/openstack-dashboard/dashboard/templates/syspanel_tenant_usage.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_tenant_usage.html
@@ -39,7 +39,7 @@
       <div class="usage_block">
         <h3>RAM</h3>
         <ul>
-          <li><span class="quantity">{{usage.total_active_ram_size}}</span><span class="unit">GB</span> Active</li>
+          <li><span class="quantity">{{usage.total_active_ram_size}}</span><span class="unit">MB</span> Active</li>
         </ul>
       </div>
 
