--- a/openstack-dashboard/dashboard/templates/login_required.html
+++ b/openstack-dashboard/dashboard/templates/login_required.html
@@ -5,9 +5,7 @@
 
 
 {% block sidebar %}
-  <div id="sidebar">
-    EMPTY_SIDEBAR
-  </div>
+  <div id="sidebar" class="empty-sidebar"></div>
 {% endblock %}
 
 {% block main %}
