--- a/openstack-dashboard/dashboard/templates/switch_tenants.html
+++ b/openstack-dashboard/dashboard/templates/switch_tenants.html
@@ -3,9 +3,7 @@
 {# present form to log in as different tenant #}
 
 {% block sidebar %}
-  <div id="sidebar">
-    EMPTY_SIDEBAR
-  </div>
+  <div id="sidebar" class="empty-sidebar"></div>
 {% endblock %}
 
 {% block main %}
