--- a/openstack-dashboard/dashboard/templates/syspanel_instances.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_instances.html
@@ -12,6 +12,7 @@
   <div id='page_header'>
     <h2><span>System Panel:</span> Instances</h2>
     <p class='desc'><span>&mdash;</span> View all running instances other than VPNs.</p>
+    <div id="spinner" class="syspanel">Loading...</div>
   </div>
 
   {% include "_messages.html" %}
@@ -43,3 +44,25 @@
     {% endif %}
   </div>
 {% endblock %}
+
+{% block footer_js %}
+  <script type="text/javascript" charset="utf-8">
+    $(function(){
+      $("#spinner").hide()
+      function loadInstances(){
+        $('#spinner').show();
+        $('#instances').load('{% url syspanel_instances_refresh %}', function(){
+          $("#spinner").hide()
+        });
+      }
+      setInterval(function(){
+        loadInstances();
+      }, 15000);
+      
+      $("a.refresh").click(function(e){
+        e.preventDefault()
+        loadInstances();
+      })
+    })
+  </script>
+{% endblock footer_js %}
