--- a/openstack-dashboard/media/dashboard/css/style.css
+++ b/openstack-dashboard/media/dashboard/css/style.css
@@ -1698,5 +1698,20 @@ li.title h4{
 	width: 24px;
 	height: 24px;
 	text-indent: -9999px;
-	margin-right: 19px;
+}
+
+#spinner.dash {
+	position: relative;
+	right: 10px;
+	bottom: 0;
+	margin-bottom: -24px;
+	top: -10px;
+}
+
+#spinner.syspanel {
+	position: relative;
+	right: 20px;
+	top: -24px;
+	bottom: 0;
+	margin-bottom: -24px;
 }
