changing refresh link

--- a/openstack-dashboard/dashboard/templates/syspanel_quotas.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_quotas.html
@@ -17,7 +17,7 @@
     <div class="main_content">
       <div class='table_title wide'>
         <h3>Default Quotas</h3>
-        <a class="refresh" title="Refresh" href="{% url syspanel_tenants %}">Refresh List</a>
+        <a class="refresh" title="Refresh" href="{% url syspanel_quotas %}">Refresh List</a>
         <div class='search'>
           <form action='' method='post'>
             <fieldset>
