--- a/openstack-dashboard/dashboard/templates/syspanel_tenant_quotas.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_tenant_quotas.html
@@ -1,5 +1,5 @@
 {% extends 'syspanel_base.html' %}
-{# list of tenants #}
+{# list of user's instances #}
 {# standard nav, sidebar, list of instances in main #}
 
 {% block sidebar %}
@@ -8,26 +8,19 @@
   {% endwith %}
 {% endblock %}
 
-{% block main %}
-    <div id='page_header'>
-      <h2><span>System Panel:</span> Tenants</h2>
-      <p class='desc'><span>&mdash;</span>Manage Tenants Quotas</p>
-    </div>
-    {% include "_messages.html" %}
+{% block page_title %}Update Tenant Quotas{% endblock %}
 
-    <div class="main_content">
-      <div class="dash_block wide form">
-        <div class='title_block'>
-        <h3>Update Tenant Quotas</h3>
-        </div>
-        {% include 'django_openstack/syspanel/_update_quotas_form.html' with form=form %}
+{% block syspanel_main %}
+  <div class="dash_block wide form">
+    {% include 'django_openstack/syspanel/_update_quotas_form.html' with form=form %}
 
-        <div class="right">
-          <h3>Description:</h3>
-          <p>From here you can edit quotas (max limits) for the tenant {{tenant_id}}.</p>
-        </div>
-      </div>
+    <div class="right">
+      <h3>Description:</h3>
+      <p>From here you can edit quotas (max limits) for the tenant {{tenant_id}}.</p>
     </div>
+  </div>
 {% endblock %}
+
+
 
 
