--- a/openstack-dashboard/dashboard/templates/syspanel_tenants.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_tenants.html
@@ -1,5 +1,5 @@
 {% extends 'syspanel_base.html' %}
-{# list of tenants #}
+{# list of user's instances #}
 {# standard nav, sidebar, list of instances in main #}
 
 {% block sidebar %}
@@ -8,28 +8,15 @@
   {% endwith %}
 {% endblock %}
 
-{% block main %}
-    <div id='page_header'>
-      <h2><span>System Panel:</span> Tenants</h2>
-      <p class='desc'><span>&mdash;</span>Manage Tenants</p>
-    </div>
-    {% include "_messages.html" %}
-    <div class="main_content">
-      <div class='table_title wide'>
-        <h3>Tenants</h3>
-        <a class="refresh" title="Refresh" href="{% url syspanel_tenants %}">Refresh List</a>
-        <div class='search'>
-          <form action='' method='post'>
-            <fieldset>
-              <label for='table_search'>Search</label>
-              <input id='table_search' name='search' type='text' value='' />
-            </fieldset>
-          </form>
-        </div>
-      </div>
-      {% include "_syspanel_tenant_list.html" %}
+{% block page_title %}Manage Tenants{% endblock %}
 
-      <a id="tenant_create_link" class="action_link large-rounded" href="{% url syspanel_tenants_create %}">Create New Tenant </a>
-    </div>
+{% block syspanel_main %}
+  {% include "_syspanel_tenant_list.html" %}
+  <a id="tenant_create_link" class="action_link large-rounded" href="{% url syspanel_tenants_create %}">Create New Tenant </a>
 {% endblock %}
+
+
+
+
+
 
