--- a/openstack-dashboard/dashboard/templates/syspanel_user_update.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_user_update.html
@@ -8,28 +8,15 @@
   {% endwith %}
 {% endblock %}
 
-{% block main %}
-  <div id='page_header'>
-    <h2><span>System Panel:</span> Users </h2>
-    <p class='desc'><span>&mdash;</span> Update User </p>
-  </div>
+{% block page_title %}Update Users{% endblock %}
 
-  {% include "_messages.html" %}
+{% block syspanel_main %}
+  <div class="dash_block wide form">
+    {% include 'django_openstack/syspanel/_update_user_form.html' %}
 
-  
-  <div class="main_content">
-    <div class="dash_block wide form">
-      <div class='title_block'> 
-        <h3>Update User</h3> 
-      </div> 
-
-      {% include 'django_openstack/syspanel/_update_user_form.html' %}
-      
-      <div class="right">
-        <h3>Description:</h3>
-        <p>From here you can edit users by changing their usernames, emails, passwords, and tenants.</p>
-      </div>
+    <div class="right">
+      <h3>Description:</h3>
+      <p>From here you can edit users by changing their usernames, emails, passwords, and tenants.</p>
     </div>
   </div>
 {% endblock %}
-
