--- a/openstack-dashboard/dashboard/templates/syspanel_base.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_base.html
@@ -8,5 +8,28 @@
 {% block sidebar %}
   {% include '_syspanel_sidebar.html' %}
 {% endblock %}
-{% block main %}{% endblock %}
 
+{% block main %}
+  {% block page_header %}
+    <div id='page_header'>
+      <h2>{% block page_title %}{% endblock %}</h2>
+      <div class="right">
+        <div class='search'>
+          <form action='' method='post'>
+            <fieldset>
+              <label for='table_search'>Search</label>
+              <input id='table_search' name='search' type='text' value='' />
+            </fieldset>
+          </form>
+        </div>
+        <a <a class="refresh" title="Refresh" href="{% block refresh_link %}{% endblock refresh_link %}">Refresh List</a>
+      </div>
+      
+    </div>
+  {% endblock %}
+  {% include "_messages.html" %}
+  
+  <div class='main_content'>
+  {% block syspanel_main %}{% endblock %}
+ </div>
+{% endblock %}
