--- a/openstack-dashboard/dashboard/templates/syspanel_images.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_images.html
@@ -8,27 +8,9 @@
   {% endwith %}
 {% endblock %}
 
-{% block main %}
-  <div id='page_header'>
-    <h2><span>System Panel:</span> Images</h2>
-    <p class='desc'><span>&mdash;</span> Create, Edit, and Delete Images.</p>
-  </div>
+{% block page_title %}Images{% endblock %}
+{% block refresh_link %}{% url syspanel_images %}{% endblock refresh_link %}
 
-  {% include "_messages.html" %}
-<div class='main_content'>
-  <div class='table_title wide'>
-    <h3>Images</h3>
-    <a <a class="refresh" title="Refresh" href="{% url syspanel_images %}">Refresh List</a>
-    <div class='search'>
-      <form action='' method='post'>
-        <fieldset>
-          <label for='table_search'>Search</label>
-          <input id='table_search' name='search' type='text' value='' />
-        </fieldset>
-      </form>
-    </div>
-  </div>
-
+{% block syspanel_main %}
   {% include "_syspanel_image_list.html" %}
-
 {% endblock %}
