--- a/openstack-dashboard/dashboard/templates/syspanel_quotas.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_quotas.html
@@ -1,5 +1,5 @@
 {% extends 'syspanel_base.html' %}
-{# list of tenants #}
+{# list of user's instances #}
 {# standard nav, sidebar, list of instances in main #}
 
 {% block sidebar %}
@@ -8,41 +8,20 @@
   {% endwith %}
 {% endblock %}
 
-{% block main %}
-    <div id='page_header'>
-      <h2><span>System Panel:</span> Quotas</h2>
-      <p class='desc'><span>&mdash;</span>Default Quotas</p>
-    </div>
-    {% include "_messages.html" %}
-    <div class="main_content">
-      <div class='table_title wide'>
-        <h3>Default Quotas</h3>
-        <a class="refresh" title="Refresh" href="{% url syspanel_quotas %}">Refresh List</a>
-        <div class='search'>
-          <form action='' method='post'>
-            <fieldset>
-              <label for='table_search'>Search</label>
-              <input id='table_search' name='search' type='text' value='' />
-            </fieldset>
-          </form>
-        </div>
-      </div>
+{% block page_title %}Default Quotas{% endblock %}
+{% block refresh_link %}{% url syspanel_quotas %}{% endblock %}
 
-      <table class="wide">
-        <tr>
-          <th>Quota Name</th>
-          <th>Limit</th>
-        </tr>
-        {% for name,value in quotas.items %}
-          <tr>
-            <td>{{name}}</td>
-            <td>{{value}}</td>
-          </tr>
-        {% endfor %}
-        
-      </table>
-
-      <a id="tenant_create_link" class="action_link large-rounded" href="{% url syspanel_tenants_create %}">Create New Tenant </a>
-    </div>
+{% block syspanel_main %}
+  <table class="wide">
+    <tr>
+      <th>Quota Name</th>
+      <th>Limit</th>
+    </tr>
+    {% for name,value in quotas.items %}
+      <tr>
+        <td>{{name}}</td>
+        <td>{{value}}</td>
+      </tr>
+    {% endfor %}
+  </table>
 {% endblock %}
-
