--- a/openstack-dashboard/dashboard/templates/syspanel_services.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_services.html
@@ -1,5 +1,5 @@
 {% extends 'syspanel_base.html' %}
-{# list of system instances #}
+{# list of user's instances #}
 {# standard nav, sidebar, list of instances in main #}
 
 {% block sidebar %}
@@ -8,26 +8,9 @@
   {% endwith %}
 {% endblock %}
 
-{% block main %}
-    <div id='page_header'>
-      <h2><span>System Panel:</span> Services</h2>
-      <p class='desc'><span>&mdash;</span>View Service statuses, and toggle them to enabled or disabled.</p>
-    </div>
-    {% include "_messages.html" %}
-    <div class="main_content">
-      <div class='table_title wide'>
-        <h3>Services</h3>
-        <a <a class="refresh" title="Refresh" href="{% url syspanel_services %}">Refresh List</a>
-        <div class='search'>
-          <form action='' method='post'>
-            <fieldset>
-              <label for='table_search'>Search</label>
-              <input id='table_search' name='search' type='text' value='' />
-            </fieldset>
-          </form>
-        </div>
-      </div>
-      {% include "_syspanel_service_list.html" %}
-    </div>
+{% block page_title %}Services{% endblock %}
+
+{% block syspanel_main %}
+  {% include "_syspanel_service_list.html" %}
 {% endblock %}
 
