--- a/openstack-dashboard/dashboard/templates/syspanel_tenant_usage.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_tenant_usage.html
@@ -1,108 +1,103 @@
-{% extends "syspanel_base.html" %}
-{% load parse_date %}
-{% load sizeformat %}
-
-{# shows usage for an individual tenant #}
+{% extends 'syspanel_base.html' %}
+{# list of user's instances #}
+{# standard nav, sidebar, list of instances in main #}
 
 {% block sidebar %}
-  {% with current_sidebar="overview" %}
+  {% with current_sidebar="tenants" %}
     {{block.super}}
   {% endwith %}
 {% endblock %}
 
-{% block main %}
-  <div id='page_header'>
-    <h2><span>System Panel:</span> Overview</h2>
-    <p class='desc'><span>&mdash;</span> View usage statistics for a tenant.</p>
-  </div>
-  <div class='main_content'>
+{% block page_title %}System Panel Overview{% endblock %}
 
-    {% include "_messages.html" %}
+{% block syspanel_main %}
+  <form action="" method="get" id="date_form">
+    <!-- {% csrf_token %} -->
+    <h3> Select a month to query its usage: </h3>
+    <div class="form-row">
+      {{dateform.date}}
+      <input class="submit" type="submit"/>
+    </div>
+  </form>
 
-    <form action="" method="get" id="date_form">
-      <!-- {% csrf_token %} -->
-      <h3> Select a month to query its usage: </h3>
-      <div class="form-row">
-        {{dateform.date}}
-        <input class="submit" type="submit"/>
-      </div>
-    </form>
+    <div class="usage_block">
+      <h3>CPU</h3>
+      <ul>
+        <li><span class="quantity">{{usage.total_active_vcpus}}</span><span class="unit">Cores</span> Active</li>
+        <li><span class="quantity">{{usage.total_cpu_usage|floatformat}}</span><span class="unit">CPU-HR</span> Used</li>
+      </ul>
+    </div>
 
-      <div class="usage_block">
-        <h3>CPU</h3>
-        <ul>
-          <li><span class="quantity">{{usage.total_active_vcpus}}</span><span class="unit">Cores</span> Active</li>
-          <li><span class="quantity">{{usage.total_cpu_usage|floatformat}}</span><span class="unit">CPU-HR</span> Used</li>
-        </ul>
-      </div>
+    <div class="usage_block">
+      <h3>RAM</h3>
+      <ul>
+        <li><span class="quantity">{{usage.total_active_ram_size}}</span><span class="unit">MB</span> Active</li>
+      </ul>
+    </div>
 
-      <div class="usage_block">
-        <h3>RAM</h3>
-        <ul>
-          <li><span class="quantity">{{usage.total_active_ram_size}}</span><span class="unit">MB</span> Active</li>
-        </ul>
-      </div>
+    <div class="usage_block">
+      <h3>Disk</h3>
+      <ul>
+        <li><span class="quantity">{{usage.total_active_disk_size}}</span><span class="unit">GB</span> Active</li>
+        <li><span class="quantity">{{usage.total_disk_usage|floatformat}}</span><span class="unit">GB-HR</span> Used</li>
+      </ul>
+    </div>
 
-      <div class="usage_block">
-        <h3>Disk</h3>
-        <ul>
-          <li><span class="quantity">{{usage.total_active_disk_size}}</span><span class="unit">GB</span> Active</li>
-          <li><span class="quantity">{{usage.total_disk_usage|floatformat}}</span><span class="unit">GB-HR</span> Used</li>
-        </ul>
-      </div>
-
-      <p id="activity">
-        <span><strong>Active Instances:</strong> {{usage.total_active_instances}}</span>
-        <span><strong>This month's VCPU-Hours:</strong> {{usage.total_cpu_usage|floatformat}}</span>
-        <span><strong>This month's GB-Hours:</strong> {{usage.total_disk_usage|floatformat}}</span>
-      </p>
+    <p id="activity">
+      <span><strong>Active Instances:</strong> {{usage.total_active_instances}}</span>
+      <span><strong>This month's VCPU-Hours:</strong> {{usage.total_cpu_usage|floatformat}}</span>
+      <span><strong>This month's GB-Hours:</strong> {{usage.total_disk_usage|floatformat}}</span>
+    </p>
 
 
-      {% if usage.instances %}
-        <div class='table_title wide'>
-          <h3>Tenant Usage: {{tenant_id}}</h3>
-          <div class='search'>
-            <form action='' method='post'>
-              <fieldset>
-                <label for='table_search'>Search</label>
-                <input id='table_search' name='search' type='text' value='' />
-              </fieldset>
-            </form>
-          </div>
+    {% if usage.instances %}
+      <div class='table_title wide'>
+        <h3>Tenant Usage: {{tenant_id}}</h3>
+        <div class='search'>
+          <form action='' method='post'>
+            <fieldset>
+              <label for='table_search'>Search</label>
+              <input id='table_search' name='search' type='text' value='' />
+            </fieldset>
+          </form>
         </div>
+      </div>
 
-        <table class="wide">
-          <tr id='headings'>
-            <th>Name</th>
-            <th>User</th>
-            <th>VCPUs</th>
-            <th>Ram Size</th>
-            <th>Disk Size</th>
-            <th>Flavor</th>
-            <th>Uptime</th>
-            <th>Status</th>
-          </tr>
-          <tbody class='main'>
-            {% for instance in instances %}
-              {% if instance.ended_at %}
-                <tr class="terminated">
-              {% else %}
-                <tr class="{% cycle 'odd' 'even' %}">
-              {% endif %}
-                <td>{{instance.name}}</td>
-                <td>{{instance.user_id}}</td>
-                <td>{{instance.vcpus}}</td>
-                <td>{{instance.ram_size|mbformat}}</td>
-                <td>{{instance.disk_size}}GB</td>
-                <td>{{instance.flavor}}</td>
-                <td>{{instance.uptime_at|timesince}}</td>
-                <td>{{instance.state|capfirst}}</td>
-              </tr>
-            {% endfor %}
-          </tbody>
-        </table>
-    {% endif %}
-  </div>
-
-
+      <table class="wide">
+        <tr id='headings'>
+          <th>Name</th>
+          <th>User</th>
+          <th>VCPUs</th>
+          <th>Ram Size</th>
+          <th>Disk Size</th>
+          <th>Flavor</th>
+          <th>Uptime</th>
+          <th>Status</th>
+        </tr>
+        <tbody class='main'>
+          {% for instance in instances %}
+            {% if instance.ended_at %}
+              <tr class="terminated">
+            {% else %}
+              <tr class="{% cycle 'odd' 'even' %}">
+            {% endif %}
+              <td>{{instance.name}}</td>
+              <td>{{instance.user_id}}</td>
+              <td>{{instance.vcpus}}</td>
+              <td>{{instance.ram_size|mbformat}}</td>
+              <td>{{instance.disk_size}}GB</td>
+              <td>{{instance.flavor}}</td>
+              <td>{{instance.uptime_at|timesince}}</td>
+              <td>{{instance.state|capfirst}}</td>
+            </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+  {% endif %}
+</div>
 {% endblock %}
+
+
+
+
+
