--- a/openstack-dashboard/dashboard/templates/syspanel_tenant_users.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_tenant_users.html
@@ -1,82 +1,71 @@
-{% extends "syspanel_base.html" %}
-
-{# shows usage for an individual tenant #}
+{% extends 'syspanel_base.html' %}
+{# list of user's instances #}
+{# standard nav, sidebar, list of instances in main #}
 
 {% block sidebar %}
-  {% with current_sidebar="tenant" %}
+  {% with current_sidebar="tenants" %}
     {{block.super}}
   {% endwith %}
 {% endblock %}
 
-{% block main %}
-  <div id='page_header'>
-    <h2><span>System Panel:</span> Tenant Overview</h2>
-    <p class='desc'><span>&mdash;</span>View/Edit Tenant Memberships</p>
-  </div>
-  <div class='main_content'>
+{% block page_title %}Users for Tenant: <span>{{tenant_id}}</span>{% endblock %}
 
-    {% include "_messages.html" %}
+{% block syspanel_main %}
+<div id="usage">
 
-    <div id="usage">
-
-      {% if users %}
-        <div class='table_title wide'>
-          <h3>Users for {{tenant_id}}</h3>
-          <div class='search'>
-            <form action='' method='post'>
-              <fieldset>
-                <label for='table_search'>Search</label>
-                <input id='table_search' name='search' type='text' value='' />
-              </fieldset>
-            </form>
-          </div>
-        </div>
-        <table class="wide">
-          <tr id='headings'>
-            <th>Name</th>
-            <th>Email</th>
-            <th>Actions</th>
-          </tr>
-          <tbody class='main'>
-            {% for user in users %}
-            <tr class="{% cycle 'odd' 'even' %}">
-                <td>{{user.id}}</td>
-                <td>{{user.email}}</td>
-                <td id="actions">
-                  <ul>
-                    <li>{% include "_remove_tenant_user.html" with form=remove_user_form %}</li>
-                  </ul>
-                </td>
-            </tr>
-            {% endfor %}
-          </tbody>
-        </table>
-      {% else %}
-        <div class="status_box info">
-          <h2>Info</h2>
-          <p>There are currently no users for this tenant</p>
-        </div>
-      {% endif %}
-      {% if new_users %}
-        <h3>Add new users</h3>
-        <table class="wide">
-          <tr id='headings'>
-            <th>Name</th>
-            <th>Actions</th>
-          </tr>
-          <tbody class='main'>
-            {% for user in new_users %}
-            <tr class="{% cycle 'odd' 'even' %}">
-                <td>{{user}}</td>
-                <td id="actions">
-                  <ul>
-										<li>{% include "_add_tenant_user.html" with form=add_user_form %}</li>
-                  </ul>
-                </td>
-            </tr>
-            {% endfor %}
-          </tbody>
-        </table>
-      {% endif %}
+  {% if users %}
+    <table class="wide">
+      <tr id='headings'>
+        <th>Name</th>
+        <th>Email</th>
+        <th>Actions</th>
+      </tr>
+      <tbody class='main'>
+        {% for user in users %}
+        <tr class="{% cycle 'odd' 'even' %}">
+            <td>{{user.id}}</td>
+            <td>{{user.email}}</td>
+            <td id="actions">
+              <ul>
+                <li>{% include "_remove_tenant_user.html" with form=remove_user_form %}</li>
+              </ul>
+            </td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  {% else %}
+    <div class="status_box info">
+      <h2>Info</h2>
+      <p>There are currently no users for this tenant</p>
     </div>
+  {% endif %}
+  {% if new_users %}
+    <h3>Add new users</h3>
+    <table class="wide">
+      <tr id='headings'>
+        <th>Name</th>
+        <th>Actions</th>
+      </tr>
+      <tbody class='main'>
+        {% for user in new_users %}
+        <tr class="{% cycle 'odd' 'even' %}">
+            <td>{{user}}</td>
+            <td id="actions">
+              <ul>
+                <li>{% include "_add_tenant_user.html" with form=add_user_form %}</li>
+              </ul>
+            </td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  {% endif %}
+
 {% endblock %}
+
+
+
+
+
+
